--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -12,7 +13,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -38,10 +39,22 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.10.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+
+    // MultiDex
+    implementation ('androidx.multidex:multidex:2.0.1')
+
+    // Retrofit
+    implementation ('com.squareup.retrofit2:retrofit:2.9.0')
+    implementation ('com.squareup.retrofit2:converter-scalars:2.9.0')
 }
