--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,15 @@ dependencies {
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth")
+
+    // Also add the dependency for the Google Play services library and specify its version
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
 
     // MultiDex
     implementation ('androidx.multidex:multidex:2.0.1')
@@ -57,4 +64,6 @@ dependencies {
     // Retrofit
     implementation ('com.squareup.retrofit2:retrofit:2.9.0')
     implementation ('com.squareup.retrofit2:converter-scalars:2.9.0')
+
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
