--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation ('com.squareup.retrofit2:converter-scalars:2.9.0')
 
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+    implementation 'commons-net:commons-net:3.8.0'
 }
