--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_Ճ"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.AddPostActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.EmailConfirmationActivity"
             android:exported="false" />
