--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     // Retrofit
     implementation ('com.squareup.retrofit2:retrofit:2.9.0')
     implementation ('com.squareup.retrofit2:converter-scalars:2.9.0')
+    implementation ('com.squareup.retrofit2:converter-gson:2.9.0')
 
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
@@ -75,6 +76,11 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'com.github.dangiashish:Auto-Image-Slider:1.0.4'
-    implementation 'com.burhanrashid52:photoeditor:3.0.1'
-    implementation 'io.agora.rtc:voice-sdk:4.2.6'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.mesibo.api:webrtc:1.0.5'
+    implementation 'com.guolindev.permissionx:permissionx:1.6.1'
+    implementation 'com.github.furkankaplan:fk-blur-view-android:1.0.1'
+    implementation 'com.github.Spikeysanju:MotionToast:1.4'
+    implementation 'nl.joery.animatedbottombar:library:1.1.0'
 }
