--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:targetSandboxVersion="1">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission
         android:name="android.permission.CAMERA"
@@ -22,18 +23,26 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/logo1"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/logo1"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_Ճ"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.UserProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PostDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.CallActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.UpdateUserDataActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SettingsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.VideoCallActivity"
             android:exported="false" />
         <activity
             android:name=".activities.AddPostActivity"
