--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     implementation 'com.github.furkankaplan:fk-blur-view-android:1.0.1'
     implementation 'com.github.Spikeysanju:MotionToast:1.4'
     implementation 'nl.joery.animatedbottombar:library:1.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
