--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        renderscriptTargetApi 21
+        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -85,4 +87,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.github.dangiashish:Auto-Image-Slider:1.0.6'
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
+    implementation files('libs/ds-photo-editor-sdk.aar')
+    implementation('com.github.bumptech.glide:glide:4.12.0')
 }
