--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        flatDir( dirs: 'libs')
     }
 }
 dependencyResolutionManagement {
