--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
     implementation files('libs/ds-photo-editor-sdk.aar')
     implementation('com.github.bumptech.glide:glide:4.12.0')
+    implementation 'com.github.3llomi:RecordView:3.1.3'
 }
