--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.project_'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.project_"
@@ -91,4 +91,8 @@ dependencies {
     implementation files('libs/ds-photo-editor-sdk.aar')
     implementation('com.github.bumptech.glide:glide:4.12.0')
     implementation 'com.github.3llomi:RecordView:3.1.3'
+    implementation("com.google.ai.client.generativeai:generativeai:0.2.0")
+    implementation("com.google.guava:guava:31.0.1-android")
+    implementation("org.reactivestreams:reactive-streams:1.0.4")
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
 }
