--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,10 +116,17 @@ dependencies {
     implementation 'com.github.dangiashish:Auto-Image-Slider:1.0.6'
     implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
     implementation files('libs/ds-photo-editor-sdk.aar')
+    implementation files('libs/core-debug.aar')
+    implementation files('libs/sceneform-debug.aar')
+    implementation files('libs/ux-debug.aar')
     implementation('com.github.bumptech.glide:glide:4.12.0')
     implementation 'com.github.3llomi:RecordView:3.1.3'
     implementation("com.google.ai.client.generativeai:generativeai:0.2.0")
     implementation("com.google.guava:guava:31.0.1-android")
     implementation("org.reactivestreams:reactive-streams:1.0.4")
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+    implementation 'com.google.ar:core:1.27.0'
+    api 'com.google.android.filament:filament-android:1.21.1'
+    api 'com.google.android.filament:gltfio-android:1.21.1'
+    api 'com.google.android.filament:filament-utils-android:1.21.1'
 }
